--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kubide",
+  "name": "kubide",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,8 +21,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.14.0",
     "reflect-metadata": "^0.2.0",
